# solrust

./: Cargo.toml
src/: main.rs  routes.rs  types.rs
