[package]
name = "solt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.18"
solana-sdk = "1.18"
anyhow = "1"
solana-program = "1.18"
spl-token = "4.0"
base64 = "0.22.1"
